# aus-lab-1

./: .gitmodules  CMakeLists.txt  README.md  plot.py
benchmark/: CMakeLists.txt  bench_utils.cc
cmake/: dependencies.cmake  settings.cmake
data/: basement.xyz  basement_columns.xyz  basement_columns_noplane.xyz  config.json
data/maps/: garage.map
ros2_ws/src/asys/: CMakeLists.txt  package.xml
ros2_ws/src/asys/config/: params.yaml
ros2_ws/src/asys/include/asys/: cylinder.hh  types.hh  utils.hh
ros2_ws/src/asys/msg/: PointList.msg
ros2_ws/src/asys/src/: perception.cc
src/: CMakeLists.txt  cylinder.hh  main.cc  main_save.cc  poc.cc  ransac.cu  ransac.hh  test.cc  test_circle.cc  test_cluster.cc  types.hh  utils.hh
src/simulator/: CMakeLists.txt  lidar.hh  main.cc  main_save.cc  simulation.hh  types.hh  utils.hh
